Fixes radio button layout issues

--- a/src/assets/css/mainstyles.sass
+++ b/src/assets/css/mainstyles.sass
@@ -149,6 +149,10 @@ select option
     color: #FF2942
     letter-spacing: 0.12em
 
+.flex-radio
+	display: flex
+	justify-content: space-evenly
+
 // Buttons
 
 .btn-tassabtnred
